# dbt-yugabyte-airflow

./: readme.md
.github/workflows/: test-dags.yaml
airflow/dev/: pyproject.toml
charts/airflow/: values.yaml
charts/yugabyte/: Chart.yaml  values.yaml
dbt/dbt_demo/: requirements.txt
dbt/jaffle_shop/: .gitignore  .user.yml  profiles.yml  requirements.txt
dbt/jaffle_shop/edr_target/: elementary_report.html
dbt/jaffle_shop/tests/: orders.yml
dbt/src/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/src/edr_target/: elementary_output.json
dbt/src/seeds/my-data-product/: my-table.yml  people.csv
docker/airflow/: Dockerfile  requirements.txt
faker/: app-cronjob.yaml  app-test.yaml  pyproject.toml
faker/src/: app.py  custom_provider.py
faker/tests/: test_app.py  test_custom_provider.py  test_postgres_connection.py
faker/tests/fixtures/: pg_credentials.py
