[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Marlon Rozindo <marlon.saura@owshq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
